# azure-knowledge-base-ingestion

./: .env.dev.template  .gitignore  Makefile  README.md  azure.yaml
src/agent/evals/: pyproject.toml
src/agent/evals/data/: mvp-agent-eval.jsonl
src/agent/evals/kb_agent_evals/: __init__.py  bootstrap.py  config.py  continuous.py  generate_adversarial_dataset.py  generate_eval_dataset.py  scheduled_eval.py  setup.py  verify.py  verify_appinsights.py
src/functions/: .env.sample  Dockerfile  function_app.py  manage_analyzers.py  pyproject.toml
src/functions/fn_convert/: __init__.py  __main__.py  cu_images.py  cu_text.py  html_parser.py  merge.py
src/functions/fn_convert_cu/: __init__.py  __main__.py  cu_text.py  function_app.py  html_parser.py  merge.py
src/functions/fn_convert_markitdown/: describe_images.py  function_app.py
src/functions/fn_convert_mistral/: __init__.py  __main__.py  describe_images.py  function_app.py  map_images.py  merge.py  mistral_ocr.py  render_pdf.py
src/functions/fn_index/: __init__.py  __main__.py  chunker.py  embedder.py  function_app.py  indexer.py  pyproject.toml  summarizer.py
src/functions/shared/: __init__.py  blob.py  blob_storage.py  client_factories.py  config.py  cu_client.py  pyproject.toml
src/functions/tests/: conftest.py
src/functions/tests/test_convert/: test_cu_images.py  test_cu_text.py  test_html_parser.py  test_merge.py
src/functions/tests/test_convert_mistral/: test_describe_images.py  test_map_images.py  test_merge.py  test_mistral_ocr.py  test_render_pdf.py
src/functions/tests/test_index/: test_chunker.py  test_embedder.py  test_indexer.py  test_summarizer.py
src/functions/tests/test_shared/: test_client_factories.py  test_config_lazy.py
src/web-app/: .dockerignore  .env.sample  Dockerfile  chainlit.md  package-lock.json  package.json  pyproject.toml
src/web-app/.chainlit/: config.toml
src/web-app/.chainlit/translations/: en-US.json
src/web-app/__tests__/api/: conversations.routes.test.ts  images.route.test.ts
src/web-app/__tests__/components/: ChatHistoryHydrator.test.tsx  CitationAwareAssistantMessage.test.tsx  CitationDialog.test.tsx  (+6 more)
src/web-app/app/: client_factories.py  config.py  data_layer.py  globals.css  image_service.py  layout.tsx  main.py  models.py
src/web-app/components/: CitationAwareAssistantMessage.tsx  CitationDialog.tsx  CitationDialogContext.tsx  ConversationSidebar.tsx  CopilotMessageRenderer.tsx  CopilotWorkspace.tsx  SearchToolRenderer.tsx  chatMessageTransforms.ts
src/web-app/public/: custom.css
src/web-app/tests/: conftest.py  test-questions.md  test_client_factories.py  test_data_layer.py  test_data_layer_integration.py  test_image_service.py  test_image_service_integration.py  test_kb_agent.py  test_main.py  test_search_tool.py
(+181 files in other folders)
